Fix corner markers being clipped by moving them outside the image frame

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -101,8 +101,8 @@
     }
 
     &--tl {
-      top: -1px;
-      left: -1px;
+      top: -12px;
+      left: -12px;
 
       &::before {
         top: 0;
@@ -119,8 +119,8 @@
     }
 
     &--br {
-      bottom: -1px;
-      right: -1px;
+      bottom: -12px;
+      right: -12px;
 
       &::before {
         bottom: 0;
